// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Generated by the C++ microgenerator.
// If you make any local changes, they will be lost.
// file:///workspace/generator/discovery/compute_public_google_rest_v1.json
// revision: 20231110

syntax = "proto3";

package google.cloud.cpp.compute.v1;

import "google/cloud/compute/v1/internal/common_034.proto";
import "google/cloud/compute/v1/internal/common_038.proto";

message RegionNetworkFirewallPoliciesGetEffectiveFirewallsResponse {
  // Effective firewalls from firewall policy.
  repeated
      RegionNetworkFirewallPoliciesGetEffectiveFirewallsResponseEffectiveFirewallPolicy
          firewall_policys = 1 [json_name = "firewallPolicys"];

  // Effective firewalls on the network.
  repeated Firewall firewalls = 2 [json_name = "firewalls"];
}

message
RegionNetworkFirewallPoliciesGetEffectiveFirewallsResponseEffectiveFirewallPolicy {
  // [Output Only] The display name of the firewall policy.
  optional string display_name = 1 [json_name = "displayName"];

  // [Output Only] The name of the firewall policy.
  optional string name = 2 [json_name = "name"];

  // The rules that apply to the network.
  repeated FirewallPolicyRule rules = 3 [json_name = "rules"];

  // [Output Only] The type of the firewall policy. Can be one of HIERARCHY,
  // NETWORK, NETWORK_REGIONAL.
  // HIERARCHY:
  // NETWORK:
  // NETWORK_REGIONAL:
  // UNSPECIFIED:
  optional string type = 4 [json_name = "type"];
}
